--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
 All colors MUST be HSL.
 */
 
+html {
+  font-family: "Monda", sans-serif;
+}
+
 @layer base {
   :root {
     --background: 0 0% 98%;
@@ -94,5 +98,42 @@ All colors MUST be HSL.
 
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+/* Tipografías personalizadas */
+@layer components {
+  .bakbak-one-regular {
+    font-family: "Bakbak One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  .monda-regular {
+    font-family: "Monda", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  .monda-medium {
+    font-family: "Monda", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+  }
+
+  .monda-semibold {
+    font-family: "Monda", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+  }
+
+  .monda-bold {
+    font-family: "Monda", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
   }
 }
